--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-PORT=3000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASS=ADMIN
 DB_NAME=alvo_cobranca
+DB_URL=postgresql://postgres:ADMIN@localhost:5432/alvo_cobranca
+
+PORT=3000
