--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./dist/src/server.js",
+    "build": "rimraf ./dist && tsc",
     "dev": "nodemon --exec ts-node ./src/server.ts",
     "test": "npx jest --runInBand",
     "test:coverage": "npx jest --coverage"
@@ -14,7 +16,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg-promise": "^11.4.3"
+    "pg-promise": "^11.4.3",
+    "rimraf": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
