--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,4 @@ DB_NAME=alvo_cobranca
 DB_URL=postgresql://postgres:ADMIN@localhost:5432/alvo_cobranca
 
 PORT=3000
+SECRET=$2y$10$lmnsH9KPU/c.bSm1F/WBSOhQOd2sPWt3v8hKFFaDtSWukC727lw6.
