--- a/server/package.json
+++ b/server/package.json
@@ -15,17 +15,21 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg-promise": "^11.4.3",
     "rimraf": "^5.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "@types/pg-promise": "^5.4.3",
     "jest": "^29.5.0",
