--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.3.1"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@types/node": "^20.2.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
