--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,7 +4,10 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
+    "skipLibCheck": true, 
+
+    /* JavaScript Support */
+    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
