--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
