--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,11 @@
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_PASS=
+DATABASE_NAME=
+DATABASE_URL=
+
 PORT=
+SALT=
+SECRET=
+SENDGRID_API_KEY=
