--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mdi/font": "^7.2.96",
     "@types/node": "^20.2.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@volar/vue-language-core": "^1.6.5",
     "typescript": "^5.3.3",
     "vite": "^4.3.2",
     "vue-tsc": "^1.8.25"
