--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "build": "rimraf ./dist && tsc",
     "dev": "nodemon --exec ts-node ./src/main.ts",
     "test": "npx jest --runInBand",
-    "test:coverage": "npx jest --coverage"
+    "test:coverage": "npx jest --coverage",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +22,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "pg": "^8.11.3",
     "pg-promise": "^11.4.3",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -33,8 +37,10 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "@types/pg-promise": "^5.4.3",
+    "@types/sequelize": "^4.28.19",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
