--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
     "dev": "nodemon --exec ts-node ./src/main.ts",
     "test": "npx jest --runInBand",
     "test:coverage": "npx jest --coverage",
-    "migrate": "npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all"
+    "migrate:up": "npx sequelize-cli db:migrate",
+    "migrate:down": "npx sequelize-cli db:migrate:undo:all",
+    "seed:up": "npx sequelize-cli db:seed:all",
+    "seed:down": "npx sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
