--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "pinia": "^2.1.3",
     "vue": "^3.3.11",
     "vue-router": "^4.1.6",
